--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method("[",corpus)
 S3method("[[",corpus)
 S3method("[[<-",corpus)
 S3method("docvars<-",corpus)
+S3method("texts<-",corpus)
 S3method(applyDictionary,dfm)
 S3method(as.DocumentTermMatrix,dfm)
 S3method(as.matrix,similMatrix)
@@ -22,8 +23,6 @@ S3method(dfm,character)
 S3method(dfm,corpus)
 S3method(dfm,tokenizedTexts)
 S3method(dfm2ldaformat,dfm)
-S3method(docnames,corpus)
-S3method(docnames,dfm)
 S3method(docvars,corpus)
 S3method(docvars,corpusSource)
 S3method(encoding,character)
@@ -44,8 +43,6 @@ S3method(nfeature,corpus)
 S3method(nfeature,dfm)
 S3method(ngrams,character)
 S3method(ngrams,tokenizedTexts)
-S3method(nsentence,character)
-S3method(nsentence,corpus)
 S3method(ntoken,character)
 S3method(ntoken,corpus)
 S3method(ntoken,dfm)
@@ -103,8 +100,6 @@ S3method(toLower,"NULL")
 S3method(toLower,character)
 S3method(toLower,corpus)
 S3method(toLower,tokenizedTexts)
-S3method(tokenize,character)
-S3method(tokenize,corpus)
 S3method(topfeatures,dfm)
 S3method(topfeatures,dgCMatrix)
 S3method(wordstem,character)
@@ -115,8 +110,10 @@ export("docvars<-")
 export("metacorpus<-")
 export("metadoc<-")
 export("settings<-")
+export("texts<-")
 export(applyDictionary)
 export(as.DocumentTermMatrix)
+export(as.corpus)
 export(as.dfm)
 export(as.wfm)
 export(cbind.dfm)
@@ -131,9 +128,12 @@ export(dfm2ldaformat)
 export(dictionary)
 export(docfreq)
 export(docnames)
+export(docnames.corpus)
+export(docnames.dfm)
 export(docvars)
 export(encoding)
 export(features)
+export(index)
 export(is.corpus)
 export(is.dfm)
 export(is.tokenizedTexts)
@@ -145,10 +145,11 @@ export(ndoc)
 export(nfeature)
 export(ngrams)
 export(nsentence)
+export(nsentence.character)
+export(nsentence.corpus)
 export(ntoken)
 export(ntype)
 export(phrasetotoken)
-export(phrasetotoken.corpus)
 export(quantedaformat2dtm)
 export(readability)
 export(removeFeatures)
@@ -173,6 +174,8 @@ export(tf)
 export(tfidf)
 export(toLower)
 export(tokenize)
+export(tokenize.character)
+export(tokenize.corpus)
 export(topfeatures)
 export(trim)
 export(trimdfm)
@@ -188,6 +191,7 @@ exportClasses(textmodel_wordfish_fitted)
 exportClasses(textmodel_wordfish_predicted)
 exportClasses(textmodel_wordscores_fitted)
 exportClasses(textmodel_wordscores_predicted)
+exportMethods(as.corpus)
 exportMethods(as.data.frame)
 exportMethods(as.matrix)
 exportMethods(colMeans)
