select_tokens_cppl_mt is working but build fails

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -172,6 +172,7 @@ export(scrabble)
 export(segment)
 export(selectFeatures)
 export(selectFeaturesOLD)
+export(selectFeaturesParallel.tokenizedTexts)
 export(settings)
 export(similarity)
 export(skipgrams)
