selectFeaturesParallel.indexedTexts seems to be working

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -172,6 +172,7 @@ export(scrabble)
 export(segment)
 export(selectFeatures)
 export(selectFeaturesOLD)
+export(selectFeaturesParallel.indexedTexts)
 export(selectFeaturesParallel.tokenizedTexts)
 export(settings)
 export(similarity)
@@ -225,6 +226,7 @@ import(data.table)
 import(methods)
 import(stringi)
 importFrom(Rcpp,evalCpp)
+importFrom(RcppParallel,RcppParallelLibs)
 importFrom(parallel,mclapply)
 importFrom(stats,complete.cases)
 importFrom(stats,median)
