--- a/NAMESPACE
+++ b/NAMESPACE
@@ -243,4 +243,5 @@ importFrom(utils,glob2rx)
 importFrom(utils,installed.packages)
 importFrom(utils,type.convert)
 importFrom(utils,unzip)
+useDynLib("")
 useDynLib(quanteda)
